# xplatform-ci-evaluation

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  test.cpp
